# Intelligent-Systems-Development

./: .gitignore  LICENSE  Makefile  README.md  gunicorn.conf.py  main.py  pyproject.toml  setup.cfg  test_main.py  test_speed.py
HWs/HW2/: HW2_1.ipynb  HW2_1_Validation.ipynb  HW2_2.ipynb  HW2_3.ipynb
HWs/HW3/: README.md  kir_userknn_cv_v2.ipynb  my_userknn_cv_v2_1.ipynb  my_userknn_cv_v2_2.ipynb  userknn.py
HWs/HW4/: README.md  my_ALS_with_features_and_ANN.ipynb
Lectures/Practice1/: main.py
Practice1/: main.py
lectures/: README.md
models/: HW1_MTS_reco.ipynb  README.md  models.py  train_knn.py
services/: README.md  dataload.py
