[tool.poetry]
name = "case1"
version = "0.1.0"
description = "Best reco project"
authors = ["K.Pribludenko <kir88@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
pandas = "^1.5.1"
requests = "^2.28.1"
numpy = "^1.23.4"
rectools = "^0.3.0"
plotly = "^5.11.0"


[tool.poetry.dev-dependencies]
ipykernel = "^6.18.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
